tests/ui/macros/recovery-allowed.stderr
error: unexpected `1` after identifier
  --> $DIR/recovery-allowed.rs:5:23
   |
LL | please_recover! { not 1 }
   |                   ----^
   |                   |
   |                   help: use `!` to perform bitwise not

error: aborting due to previous error

